# GeometryToolkit

./: CMakeLists.txt  README.md
examples/: DistanceCalculator.cpp
src/: GeometryUtils.cpp  GeometryUtils.hpp  Point.cpp  Point.hpp  input.cpp  input.hpp
tests/: TestDegeneracy.cpp  TestGeometryUtils.cpp
